# toss

./: Cargo.toml  README.md  flake.nix
src/: catch.rs  throw.rs
